<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ar.com.idearsoft.mobile.android.edadcorregida.CalculadoraActivity"
    tools:showIn="@layout/activity_calculadora">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/activity_calculadora_textview_mensaje_parametros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/activity_calculadora_mensaje_parametros" />

        <LinearLayout
            android:id="@+id/activity_calculadora_linearlayout_fecha_nacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:orientation="vertical"
            android:layout_below="@id/activity_calculadora_textview_mensaje_parametros"
            >

            <TextView
                android:id="@+id/activity_calculadora_textview_fecha_nacimiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_calculadora_parametro_fecha_nacimiento"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/activity_calculadora_edittext_fecha_nacimiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/activity_calculadora_linearlayout_fecha_control"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:orientation="vertical"
            android:layout_below="@id/activity_calculadora_linearlayout_fecha_nacimiento"
            >

            <TextView
                android:id="@+id/activity_calculadora_textview_fecha_control"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_calculadora_parametro_fecha_control"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/activity_calculadora_edittext_fecha_control"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/activity_calculadora_linearlayout_edad_gestacional"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:orientation="vertical"
            android:layout_below="@id/activity_calculadora_linearlayout_fecha_control"
            >

            <TextView
                android:id="@+id/activity_calculadora_textview_edad_gestacional"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_calculadora_parametro_edad_gestacional"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/activity_calculadora_edittext_edad_gestacional"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:hint="@string/activity_calculadora_ingrese_edad_gestacional"
                android:inputType="number"
                android:digits="0123456789"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/activity_calculadora_linearlayout_termino_gestacional"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:orientation="vertical"
            android:layout_below="@id/activity_calculadora_linearlayout_edad_gestacional"
            >

            <TextView
                android:id="@+id/activity_calculadora_textview_termino_gestacional"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_calculadora_parametro_termino_gestacional"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/activity_calculadora_edittext_termino_gestacional"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:inputType="number"
                android:digits="0123456789"
                android:text="40"
                />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>
