<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="ar.com.idearsoft.mobile.android.edadcorregida.SplashActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <RelativeLayout
        android:id="@+id/activity_splash_contenedor"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/activity_splash_contenedor_texto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/activity_splash_texto1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:keepScreenOn="true"
                android:text="@string/activity_splash_titulo1"
                android:textColor="@color/activity_splash_blanco"
                android:textSize="42sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/activity_splash_texto2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:keepScreenOn="true"
                android:text="@string/activity_splash_titulo2"
                android:textColor="@color/activity_splash_blanco"
                android:textSize="42sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/activity_splash_texto3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:keepScreenOn="true"
                android:text="@string/activity_splash_titulo3"
                android:textColor="@color/activity_splash_blanco"
                android:textSize="32sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ProgressBar
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/activity_splash_contenedor_texto"
            />

    </RelativeLayout>

</FrameLayout>
